Basic app structure with header, sidebar and canvas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
   </head>
 
   <body>
-    <!-- <img src="./src/images/yoda-stitch.jpg"/> -->
+    <Header class="header-main">
+      <nav class="header-nav-main">
+        <span class="header-nav-title">UMLChart</span>
+        <ul class="header-nav-links">
+          <li class="header-nav-link-git">Github</li>
+          <li class="header-nav-link-linkedin">Linkedin</li>
+        </ul>
+      </nav>
+    </Header>
+    <Section class="section-content-main">
+      <Section id="section-content-sidebar">          
+      </Section>
+      <section id="myCanvas"></section>
+    </Section>
     <script src="./dist/main.js"></script>
   </body>
 </html>
