Add textShape and classShape features to the app also add drag item feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>UMLChart</title>
   </head>
 
-  <body>
+  <body id="body">
     <Header class="header-main">
       <nav class="header-nav-main">
         <span class="header-nav-title">UMLChart</span>
@@ -19,9 +19,9 @@
       </nav>
     </Header>
     <Section class="section-content-main">
-      <Section id="section-content-sidebar">          
+      <Section id="section-content-sidebar">   
       </Section>
-      <section id="myCanvas"></section>
+      <canvas id="myCanvas"></canvas>
     </Section>
     <script src="./dist/main.js"></script>
   </body>
