Add download and open file feature in the app

--- a/index.html
+++ b/index.html
@@ -13,16 +13,22 @@
       <nav class="header-nav-main">
         <span class="header-nav-title">UMLChart</span>
         <ul class="header-nav-links">
-          <li class="header-nav-link-git">Github</li>
-          <li class="header-nav-link-linkedin">Linkedin</li>
+          <li class="header-nav-link-git"><a href="https://github.com/khaliqzohaib92" target="_blank">Github</a></li>
+          <li class="header-nav-link-linkedin"><a href="https://www.linkedin.com/in/zohaibkhaliq/" target="_blank">Linkedin</a></li>
         </ul>
       </nav>
     </Header>
-    <Section class="section-content-main">
+    <section class="section-content-main">
       <Section id="section-content-sidebar">   
       </Section>
       <canvas id="myCanvas"></canvas>
-    </Section>
+      <section>
+        <div>
+          <button id="open-file">Open</button>
+          <button id="download-file">Download</button>
+        </div>
+      </section>
+    </section>
     <script src="./dist/main.js"></script>
   </body>
 </html>
