Add info view to the side and some css fixes

--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
       </section>
 
       <!-- info side bar -->
-      <section>
-        <div id="info-sidebar"> </div>
+      <section id="info-sidebar">
       </section>
     </section>
 
-    
+
     <script src="./dist/main.js"></script>
   </body>
 </html>
