--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta property="og:image" content="./project_gif/umlchart.gif" />
     <link rel="stylesheet" href="./dist/main.css" />
     <link rel="icon" href="./src/images/favicon.ico">
 
