--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta property="og:url" content="./project_gif/umlchart.gif" />
+    <meta property="og:image" content="https://github.com/khaliqzohaib92/UMLChart/blob/master/project_gif/umlchart.gif" />
+    <meta property="og:image:type" content="image/gif">
     <meta property="og:title" content="UMLChart" />
     <meta property="og:descirption" content="UMLChart is a canvas based UML diagram making tool. This will allow you to draw classes/modules, represent variables/methods and show connections." />
     <link rel="stylesheet" href="./dist/main.css" />
