Fix social website share

--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta property="og:image" content="https://github.com/khaliqzohaib92/UMLChart/blob/master/project_gif/umlchart.gif" />
-    <meta property="og:image:type" content="image/gif">
-    <meta property="og:title" content="UMLChart" />
-    <meta property="og:descirption" content="UMLChart is a canvas based UML diagram making tool. This will allow you to draw classes/modules, represent variables/methods and show connections." />
     <link rel="stylesheet" href="./dist/main.css" />
     <link rel="icon" href="./src/images/favicon.ico">
 
+    <meta property="og:image" content="https://github.com/khaliqzohaib92/UMLChart/blob/master/project_gif/umlchart.gif" />
+    <meta property="og:url" content="https://github.com/khaliqzohaib92/UMLChart/blob/master/project_gif/umlchart.gif" />
+    <meta property="og:title" content="UMLChart" />
+    <meta property="og:descirption" content="UMLChart is a canvas based UML diagram making tool. This will allow you to draw classes/modules, represent variables/methods and show connections." />
+  
     <title>UMLChart</title>
   </head>
 
