--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="./src/images/favicon.ico">
 
     <meta property="og:image" content="https://github.com/khaliqzohaib92/UMLChart/blob/master/project_gif/umlchart.gif" />
-    <meta property="og:url" content="https://github.com/khaliqzohaib92/UMLChart/blob/master/project_gif/umlchart.gif" />
+    <meta property="og:url" content="https://khaliqzohaib92.github.io/UMLChart/" />
     <meta property="og:title" content="UMLChart" />
     <meta property="og:descirption" content="UMLChart is a canvas based UML diagram making tool. This will allow you to draw classes/modules, represent variables/methods and show connections." />
   
