--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./dist/main.css" />
     <link rel="icon" href="./src/images/favicon.ico">
+    <meta property="og:title" content="Wicked Hexagon" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://github.com/khaliqzohaib92/UMLChart/blob/master/umlchart.jpg" />
     <meta property="og:url" content="https://khaliqzohaib92.github.io/UMLChart/" />
-    <meta property="og:title" content="UMLChart" />
-    <meta property="og:descirption" content="UMLChart is a canvas based UML diagram making tool. This will allow you to draw classes/modules, represent variables/methods and show connections." />
-  
+    <meta property="og:image" content="https://khaliqzohaib92.github.io/UMLChart/project_gif/umlchart.gif" />
     <title>UMLChart</title>
   </head>
 
