--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./dist/main.css" />
     <link rel="icon" href="./src/images/favicon.ico">
-    <meta property="og:title" content="Wicked Hexagon" />
+    <meta property="og:title" content="UMLChart" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://khaliqzohaib92.github.io/UMLChart/" />
     <meta property="og:image" content="https://khaliqzohaib92.github.io/UMLChart/project_gif/umlchart.gif" />
