--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./dist/main.css" />
-    <!-- <link rel="icon" href="./src/images/favicon.ico"> -->
+    <link rel="icon" href="./src/images/favicon.ico">
     <meta property="og:title" content="UMLChart" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://khaliqzohaib92.github.io/UMLChart/" />
-    <meta property="og:image" content="https://khaliqzohaib92.github.io/UMLChart/project_gif/umlchart.gif" />
+    <meta property="og:image" content="https://khaliqzohaib92.github.io/UMLChart/project_gif/screenshot.jpg" />
     <title>UMLChart</title>
   </head>
 
