--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="UMLChart" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://khaliqzohaib92.github.io/UMLChart/" />
-    <meta property="og:image" content="https://khaliqzohaib92.github.io/UMLChart/project_gif/screenshot.jpg" />
+    <meta property="og:image" content="https://khaliqzohaib92.github.io/UMLChart/project_gif/umlchart.gif" />
     <title>UMLChart</title>
   </head>
 
