Changed nav title from logo to word

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <Header class="header-main">
       <!-- nav bar -->
       <nav class="header-nav-main">
-        <span class="header-nav-title"><img src="./src/images/logo.png">MLChart</span>
+        <span class="header-nav-title">UMLChart</span>
         <ul class="header-nav-links">
           <li class="header-nav-link-git"><a href="https://github.com/khaliqzohaib92" target="_blank">Github</a></li>
           <li class="header-nav-link-linkedin"><a href="https://www.linkedin.com/in/zohaibkhaliq/" target="_blank">Linkedin</a></li>
